Completed app for deliverable 3, minus address verification, still awaiting answer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,13 +50,39 @@
                 android:text="Post a Service"
                 android:visibility="invisible"/>
 
-
             <Button
                 android:id="@+id/Button_EditService"
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:text="Edit your Service"
                 android:visibility="gone" />
+
+            <Button
+                android:id="@+id/button_Hours"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:text="Select or update Hours"
+                android:visibility="invisible" />
+
+            <Button
+                android:id="@+id/button_editProfile"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:text="Create or Edit profile"
+                android:visibility="invisible" />
+
+            <Button
+                android:id="@+id/button_seMyServices"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:text="See My Services"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/userType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible" />
         </LinearLayout>
     </FrameLayout>
 
