--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,8 +30,7 @@
             android:ems="10"
             android:inputType="textEmailAddress"
             android:hint="Username"
-            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
-            />
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789" />
 
         <EditText
             android:id="@+id/loginPassword"
@@ -39,8 +38,7 @@
             android:layout_height="40dp"
             android:ems="10"
             android:inputType="textPassword"
-            android:hint="Password"
-            />
+            android:hint="Password" />
 
         <Space
             android:layout_width="match_parent"
@@ -50,21 +48,18 @@
             android:id="@+id/buttonSignin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/action_sign_in_short"
-            />
+            android:text="@string/action_sign_in_short" />
 
         <Button
             android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/action_register"
-            />
+            android:text="@string/action_register" />
 
         <Button
             android:id="@+id/buttonAbout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/action_About"
-            />
+            android:text="@string/action_About" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
