--- a/app/src/main/res/layout/activity_make_profile.xml
+++ b/app/src/main/res/layout/activity_make_profile.xml
@@ -31,13 +31,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6">
 
-        <fragment
-            android:id="@+id/place_autocomplete_fragment"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+        <fragment android:id="@+id/autocomplete_fragment"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
             android:hint="Your address" />
-
     </FrameLayout>
 
     <EditText
@@ -77,7 +75,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <Button
         android:id="@+id/button_submitProfile"
