Trying to fix CirclCI again + Added updates to project

--- a/app/src/main/res/layout/activity_see_profile.xml
+++ b/app/src/main/res/layout/activity_see_profile.xml
@@ -28,17 +28,6 @@
         app:layout_constraintTop_toBottomOf="@+id/TitleText">
 
         <TextView
-            android:id="@+id/branchName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginLeft="48dp"
-            android:layout_marginTop="24dp"
-            android:text="TextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNum" />
-
-        <TextView
             android:id="@+id/textAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,6 +45,17 @@
             app:layout_constraintStart_toStartOf="@+id/branchName"
             app:layout_constraintTop_toBottomOf="@+id/textAddress" />
 
+        <TextView
+            android:id="@+id/branchName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="24dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNum" />
+
         <Button
             android:id="@+id/button_userAds"
             android:layout_width="wrap_content"
@@ -67,9 +67,43 @@
             android:layout_marginRight="8dp"
             android:text="Branch's Services"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.609"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/branchName" />
+            app:layout_constraintTop_toBottomOf="@+id/ratingbox" />
+
+        <Button
+            android:id="@+id/RateMe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="24dp"
+            android:text="Rate Me"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_userAds" />
+
+        <TextView
+            android:id="@+id/ratingbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="24dp"
+            android:text="Rating : N/A"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/branchName"/>
+
+        <Button
+            android:id="@+id/seeRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="5dp"
+            android:text="See Ratings"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/RateMe"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
