--- a/app/src/main/res/layout/service.xml
+++ b/app/src/main/res/layout/service.xml
@@ -44,18 +44,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button_View_Profile"
-            android:layout_width="24dp"
+            android:id="@+id/cloneAD"
+            android:layout_width="145dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="View Profile" />
+            android:text="Post a copy of service"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/bookService"
+            android:layout_width="83dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Book Service"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/availability"
-            android:layout_width="164dp"
+            android:layout_width="115dp"
             android:layout_height="wrap_content"
             android:text="See Availability" />
     </LinearLayout>
@@ -84,13 +94,11 @@
             android:visibility="invisible" />
 
         <Button
-            android:id="@+id/cloneAD"
+            android:id="@+id/button_View_Profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Post a copy of service"
-            android:visibility="invisible" />
-
+            android:text="View Profile" />
 
     </LinearLayout>
 
