--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,27 @@
                 android:text="See My Services"
                 android:visibility="invisible" />
 
+            <Button
+                android:id="@+id/button_searchServices"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:text="Search"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/button_requests"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:text="Pending Request"
+                android:visibility="invisible" />
+
+            <Button
+                android:id="@+id/button_deleteUsers"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:text="Delete Users"
+                android:visibility="invisible" />
+
             <TextView
                 android:id="@+id/userType"
                 android:layout_width="match_parent"
